--- a/src/home.css
+++ b/src/home.css
@@ -19,14 +19,14 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     z-index: 1000; 
   }
-  
-  
+  .home-page {
+    padding-top: 60px; 
+} 
   .main-content {
     margin-top: 150px; 
     padding: 20px;
   }
   
-
   body {
     top: 1000px;
     margin: 0;
