--- a/src/sidebar.css
+++ b/src/sidebar.css
@@ -32,6 +32,13 @@
   overflow-y: auto;
   padding: 2px;
   margin-top: 10px;
+  margin-bottom: 150px
+}
+button.btn-light {
+  position: absolute;
+  top: 10px; 
+  right: 10px; 
+  z-index: 1100; 
 }
 
 .fixed-section {
